[package]
name = "europe-elects-csv"
version = "0.1.0"
edition = '2021'
authors = ["ValStartaker"]
description = "A serializer/deserializer for the Europe Elects CSV format"
repository = "https://github.com/ValStartaker/europe-elects-csv"
keywords = ["serde", "csv", "election", "poll"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"]}
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
